# flask_template

./: .dockerignore  .env.example  Dockerfile  app.py  app_factory.py  pyproject.toml
.qoder/rules/: coding_style.md
configs/: __init__.py  app_config.py
configs/feature/: __init__.py
configs/middleware/: __init__.py
constants/: __init__.py
controllers/console/: __init__.py
controllers/service_api/: __init__.py
docker/: .env.example  deploy.sh  docker-compose-template.yaml  entrypoint.sh  generate_docker_compose.py
extensions/: ext_app_metrics.py  ext_blueprints.py  ext_commands.py  ext_database.py  ext_import_modules.py  ext_logging.py  ext_migrate.py  ext_orjson.py  ext_request_logging.py  ext_timezone.py  ext_warnings.py
libs/: exception.py  external_api.py
models/: engine.py
