[project]
name = "flask_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-orjson>=2.0.0",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]
