[project]
name = "flask_template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-migrate>=4.1.0",
    "flask-orjson>=2.0.0",
    "flask-restx>=1.3.2",
    "flask-sqlalchemy>=3.1.1",
    "gevent>=26.4.0",
    "psycopg2>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytz>=2026.1.post1",
]
